--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "openai": "^4.85.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "daisyui": "^4.12.23",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
