--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "next-session": "^4.0.5",
     "omise": "^0.12.1",
     "openai": "^4.85.3",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-number-format": "^5.4.4",
     "react-toastify": "^11.0.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-credit-cards": "^0.8.4",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "daisyui": "^4.12.23",
