--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@libsql/client": "^0.15.1",
     "@line/liff": "2.25.1",
+    "@sentry/nextjs": "^9.29.0",
     "axios": "^1.8.1",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.5",
     "framer-motion": "^12.4.5",
-    "next": "15.1.7",
+    "next": "^15.3.3",
     "next-session": "^4.0.5",
     "omise": "^0.12.1",
     "openai": "^4.85.3",
